Fix : 함수를 간결하게 변경
PR 코드리뷰에 요청된 사항으로 불필요한 함수를 제거하고 .toList()사용